debugging: fixed errors with operator buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <button class="calc">7</button>
           <button class="calc">8</button>
           <button class="calc">9</button>
-          <button class="color">x</button>
+          <button class="color calc">x</button>
           <button class="calc">4</button>
           <button class="calc">5</button>
           <button class="calc">6</button>
@@ -35,8 +35,8 @@
           <button class="calc">2</button>
           <button class="calc">3</button>
           <button class="color calc">+</button>
-          <button class="zero clac">0</button>
-          <button class="color clac">.</button>
+          <button class="zero calc">0</button>
+          <button class="color calc">.</button>
           <button class="calc">=</button>
         </div>
       </div>
