debugging: fixed errors with operator buttons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <input type="text" name="screen" id="screen" />
         <div class="button-div">
           <button class="color calc">AC</button>
-          <button class="color">(</button>
-          <button class="color">)</button>
-          <button class="color">/</button>
+          <button class="color calc">(</button>
+          <button class="color calc">)</button>
+          <button class="color calc">/</button>
           <button class="calc">7</button>
           <button class="calc">8</button>
           <button class="calc">9</button>
