defbugging: removing a class from unresponsive buttons

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <input type="text" name="screen" id="screen" />
         <div class="button-div">
           <button class="color calc">AC</button>
-          <button class="color calc">(</button>
-          <button class="color calc">)</button>
-          <button class="color calc">/</button>
+          <button class="color">(</button>
+          <button class="color">)</button>
+          <button class="color">/</button>
           <button class="calc">7</button>
           <button class="calc">8</button>
           <button class="calc">9</button>
-          <button class="color calc">x</button>
+          <button class="color">x</button>
           <button class="calc">4</button>
           <button class="calc">5</button>
           <button class="calc">6</button>
