defbugging: adding a class back to test (succesful when class removed) changed order

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <input type="text" name="screen" id="screen" />
         <div class="button-div">
           <button class="color calc">AC</button>
-          <button class="calc">(</button>
-          <button class="calc">)</button>
-          <button class="calc">/</button>
+          <button class="calc color">(</button>
+          <button class="calc color">)</button>
+          <button class="calc color">/</button>
           <button class="calc">7</button>
           <button class="calc">8</button>
           <button class="calc">9</button>
@@ -30,13 +30,13 @@
           <button class="calc">4</button>
           <button class="calc">5</button>
           <button class="calc">6</button>
-          <button class="color calc">-</button>
+          <button class="calc color">-</button>
           <button class="calc">1</button>
           <button class="calc">2</button>
           <button class="calc">3</button>
-          <button class="color calc">+</button>
+          <button class="calc color">+</button>
           <button class="zero calc">0</button>
-          <button class="color calc">.</button>
+          <button class="calc color">.</button>
           <button class="calc">=</button>
         </div>
       </div>
