--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <button class="calc">7</button>
           <button class="calc">8</button>
           <button class="calc">9</button>
-          <button class="calc">x</button>
+          <button class="calc color">x</button>
           <button class="calc">4</button>
           <button class="calc">5</button>
           <button class="calc">6</button>
