bugfix:reformatted html and javascript

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Calcultor</title>
+    <title>Calculator</title>
   </head>
   <body>
     <div class="container">
@@ -19,25 +19,25 @@
       <div class="calculator">
         <input type="text" name="screen" id="screen" />
         <div class="button-div">
-          <button class="color calc">AC</button>
-          <button class="calc color">(</button>
-          <button class="calc color">)</button>
-          <button class="calc color">/</button>
-          <button class="calc">7</button>
-          <button class="calc">8</button>
-          <button class="calc">9</button>
-          <button class="calc color">x</button>
-          <button class="calc">4</button>
-          <button class="calc">5</button>
-          <button class="calc">6</button>
-          <button class="calc color">-</button>
-          <button class="calc">1</button>
-          <button class="calc">2</button>
-          <button class="calc">3</button>
-          <button class="calc color">+</button>
-          <button class="zero calc">0</button>
-          <button class="calc color">.</button>
-          <button class="calc">=</button>
+          <button class="color">AC</button>
+          <button class="color">(</button>
+          <button class="color">)</button>
+          <button class="color">/</button>
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+          <button class="color">x</button>
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button class="color">-</button>
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button class="color">+</button>
+          <button class="zero">0</button>
+          <button class="color">.</button>
+          <button>=</button>
         </div>
       </div>
     </div>
